config/objects/Sales_Tax_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Load_Maximum__c</fullName>
        <label>Load Maximum</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Load_Minimum__c</fullName>
        <label>Load Minimum</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Sales Tax Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TAX-{0}</displayFormat>
        <label>Tax Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Tax Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>